--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ body{
     border-radius: 12px;
     border: 4px solid palevioletred;
     border-width: 0px 4px 4px 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-weight: bold;
 }
 .board{
     display: grid;
