--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    height: 100svh;
+    height: 100vh;
     background-color: hsl(0, 0%, 6%);
     color: white;
     font-family: 'Poppins';
@@ -18,7 +18,7 @@ body{
 .navbar .logo{
     color: rgb(160, 196, 255);
     padding-left: 20px;
-    font-size: 1.4rem;
+    font-size: calc(1rem + 1.5vmin);
     font-weight: bolder;
     text-shadow: 0px 0px 6px rgb(44, 0, 0);
 }
@@ -45,8 +45,7 @@ body{
 }
 
 .result{
-    height: 50px;
-    aspect-ratio: 4/1;
+    padding: 8px;
     background-color: rgb(246, 215, 250);
     border-radius: 12px;
     border: 4px solid palevioletred;
@@ -54,8 +53,10 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
+    color: rgb(106, 0, 117);
     font-weight: bold;
+    font-size: calc(1rem + 1vmin);
+    
 }
 .board{
     display: grid;
@@ -67,7 +68,7 @@ body{
 
 
 .board button{
-    height: clamp(100px,30vmin,200px);
+    height: clamp(100px,30vmin,150px);
     aspect-ratio: 1/1;
     background-color: rgb(153, 181, 198);
 
